finished discovery endpoint
